fix: current edits

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,14 @@
 
 <section class="showreel">
   <div class="showreel__container">
-    <video class="video-js  showreel__video" width="1280" height="720" controls poster="img/video.jpg">
+    <video class="showreel__preview" width="1920" height="970" loop playsinline autoplay muted>
+      <source src="video/showreel-prev.mp4" type="video/mp4">
+    </video>
+
+    <video class="video-js  showreel__video" width="1920" height="1080" controls>
       <source src="video/showreel.mp4" type="video/mp4">
     </video>
+
     <div class="showreel__target">
        <span class="showreel__play">Play</span>
        <span class="showreel__pause">Pause</span>
@@ -716,7 +721,7 @@
         <div class="grid__item">
           <div class="cources__container">
             <video class="video-js  cources__video" width="1280" height="720" controls poster="img/promo.jpg">
-              <source src="video/showreel.mp4" type="video/mp4">
+              <source src="video/cources.mp4" type="video/mp4">
             </video>
             <div class="cources__target">
               <span class="cources__play">Play</span>
