--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -67,7 +67,7 @@
 
       <div class="grid__list  grid-works__list">
         <div class="grid__item  grid-works__item  grid-works__item--large">
-          <a href="portfolio-item.html" class="work-card">
+          <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
                 <img src="img/card1.jpg">
@@ -76,7 +76,7 @@
 
             <div class="work-card__content">
               <div class="work-card__title">
-                <h3>Corporate website for Dots Cafe.</h3>
+                <h3><a href="portfolio-item.html">Corporate website for Dots Cafe.</a></h3>
               </div>
 
               <div class="work-card__tags">
@@ -89,24 +89,20 @@
                 </ul>
               </div>
             </div>
-
-            <div class="work-card__target">
-              <span>View</span>
-           </div>
-          </a>
+          </div>
         </div>
 
         <div class="grid__item  grid-works__item">
-          <a href="portfolio-item.html" class="work-card">
+          <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="img/card1.jpg">
+                <img src="img/card2.jpg">
               </div>
            </div>
 
             <div class="work-card__content">
               <div class="work-card__title">
-                <h3>Corporate website for Dots Cafe.</h3>
+                <h3><a href="portfolio-item.html">Website for videomakers Engine Room.</a></h3>
               </div>
 
               <div class="work-card__tags">
@@ -119,11 +115,7 @@
                 </ul>
               </div>
             </div>
-
-            <div class="work-card__target">
-              <span>View</span>
-           </div>
-          </a>
+          </div>
         </div>
 
         <div class="grid__item  grid-works__item">
